<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PhotoUploadActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/upload_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_background">

            <Button
                android:id="@+id/button_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_background"
                android:text="@string/photo_upload"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite1000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_progress" />

            <ProgressBar
                android:id="@+id/upload_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_content" />

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/imageView"
                android:scaleType="centerCrop"
                android:src="@drawable/image_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_photo_choose" />

            <Button
                android:id="@+id/button_photo_choose"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_background"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/choose_photo"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite1000"
                app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_content"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_background"
                android:gravity="top"
                android:hint="@string/write_your_content_here"
                android:inputType="textMultiLine"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_preview" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background"
                app:layout_constraintBottom_toTopOf="@+id/image_preview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_photo_choose"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/img_type"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:backgroundTint="@color/colorWhite1000"
                    android:textSize="14sp" />
            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>