<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/image_main_frame"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_background"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_single_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/one_person"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_image"
            app:layout_constraintBottom_toBottomOf="@+id/button_two_person"
            app:layout_constraintEnd_toStartOf="@+id/button_two_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_two_person" />

        <ImageButton
            android:id="@+id/button_two_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/two_person"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_image"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/button_together"
            app:layout_constraintEnd_toStartOf="@+id/button_together"
            app:layout_constraintStart_toEndOf="@+id/button_single_person"
            app:layout_constraintTop_toTopOf="@+id/button_together" />

        <ImageButton
            android:id="@+id/button_together"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="136dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_image"
            android:scaleType="fitXY"
            android:src="@drawable/third_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_two_person" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="Upload"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite1000"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_love" />

        <ImageView
            android:id="@+id/img_background_frame"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/anni_frame6" />

        <TextView
            android:id="@+id/txt_anni_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:text="200 days"
            android:textAllCaps="true"
            android:textSize="35sp"
            android:textColor="@color/colorWhite1000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_background_frame" />

        <yanzhikai.textpath.SyncTextPathView
            android:id="@+id/txt_anni_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:duration="7000"
            app:paintStrokeColor="@color/colorWhite1000"
            app:pathStrokeColor="@color/colorWhite1000"
            app:showPainter="true"
            android:layout_marginTop="20dp"
            app:text="@string/happy_anniversary"
            app:textInCenter="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_anni_date"
            app:textSize="30sp" />

        <TextView
            android:id="@+id/txt_love"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/love"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:freezesText="true"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorWhite1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_two_person" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>